@@ -19,15 +19,16 @@
 	<translation entry="3051">Ignoring <value-of-param name="exceptionClass" /> exception with message <value-of-param name="exceptionMessage" format="quoted" />. Detail: <value-of-param name="description" format="quoted" />.</translation>
 
 	<translation entry="3100">Calling <value-of-param name="url" />, total time-out is <value-of-param name="totalTimeOut" /> ms, connection time-out is <value-of-param name="connectionTimeOut" /> ms, socket time-out is <value-of-param name="socketTimeOut" /> ms.</translation>
-	<translation entry="3101">Connection refused while calling <value-of-param name="url" />.</translation>
-	<translation entry="3102">Connection time-out after <value-of-param name="timeOut" /> ms while calling <value-of-param name="url" />.</translation>
-	<translation entry="3103">Socket time-out after <value-of-param name="timeOut" /> ms while calling <value-of-param name="url" />.</translation>
-	<translation entry="3104">Total call time-out after <value-of-param name="timeOut" /> ms while calling <value-of-param name="url" />.</translation>
-	<translation entry="3105">Received acceptable HTTP result with code <value-of-param name="code" /> while calling URL <value-of-param name="url" />.</translation>
-	<translation entry="3106">Received unacceptable HTTP result with code <value-of-param name="code" /> while calling URL <value-of-param name="url" />.</translation>
-	<translation entry="3107">I/O error while calling <value-of-param name="url" />.</translation>
-	<translation entry="3108">Unexpected exception while calling <value-of-param name="url" />.</translation>
-	<translation entry="3109">Unknown host error while calling <value-of-param name="url" />.</translation>
+	<translation entry="3101">Called <value-of-param name="url" />, with the parameters <value-of-param name="parameters"/>. The call took <value-of-param name="duration" /> ms.</translation>
+	<translation entry="3102">Connection refused while calling <value-of-param name="url" />.</translation>
+	<translation entry="3103">Connection time-out after <value-of-param name="timeOut" /> ms while calling <value-of-param name="url" />.</translation>
+	<translation entry="3104">Socket time-out after <value-of-param name="timeOut" /> ms while calling <value-of-param name="url" />.</translation>
+	<translation entry="3105">Total call time-out after <value-of-param name="timeOut" /> ms while calling <value-of-param name="url" />.</translation>
+	<translation entry="3106">Received acceptable HTTP result with code <value-of-param name="code" /> while calling URL <value-of-param name="url" />.</translation>
+	<translation entry="3107">Received unacceptable HTTP result with code <value-of-param name="code" /> while calling URL <value-of-param name="url" />.</translation>
+	<translation entry="3108">I/O error while calling <value-of-param name="url" />.</translation>
+	<translation entry="3109">Unexpected exception while calling <value-of-param name="url" />.</translation>
+	<translation entry="3110">Unknown host error while calling <value-of-param name="url" />.</translation>
 
 	<translation entry="3200">Starting watch thread for file <value-of-param name="file" format="quoted" />. Checking for modifications every <value-of-param name="interval" /> seconds.</translation>
 	<translation entry="3201">Changing the watch interval for file <value-of-param name="file" format="quoted" /> from <value-of-param name="oldInterval" /> to <value-of-param name="newInterval" /> seconds.</translation>
